<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_slide1_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arlrdbd"
        android:gravity="center"
        android:textSize="32sp"
        android:textColor="@color/blue_1"
        android:text="@string/slide1_xml_title" />
    <TextView
        android:id="@+id/tv_slide1_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arlrdbd"
        android:gravity="center"
        android:layout_marginTop="32dp"
        android:textSize="20sp"
        android:textColor="@color/darkest_grey"
        android:text="@string/slide1_xml_subtitle" />

    <EditText
        android:id="@+id/et_slide1_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:maxLines="1"
        android:background="@drawable/bg_edittext_intro"
        android:fontFamily="@font/roboto"
        android:hint="@string/slide1_hint_name"
        android:paddingStart="24dp"
        android:paddingLeft="24dp"
        android:textSize="16sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">
        <EditText
            android:id="@+id/et_slide1_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:maxLines="1"
            android:maxLength="2"
            android:background="@drawable/bg_edittext_small"
            android:fontFamily="@font/roboto"
            android:hint="@string/slide1_hint_age"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/slide1_spinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:textSize="16sp"
            android:fontFamily="@font/roboto"
            android:background="@drawable/bg_edittext_medium"
            android:layout_weight="1" />

    </LinearLayout>
    <TextView
        android:id="@+id/tv_text_toc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:textSize="12sp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@color/blue_2"
        android:text="@string/slide1_agreement_text" />
</LinearLayout>