<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    tools:context="com.subhajitkar.commercial.project_neela.activities.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/home_title"
        android:text="@string/temp_title_home"
        android:textColor="@color/darkest_grey"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="@font/arlrdbd"
        android:layout_margin="16dp" />

    <!-- body section-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_home_card1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:layout_above="@id/layout_bottom">
            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <!--avatar -->
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/avatar_frame">
                        <pl.droidsonroids.gif.GifImageView
                            android:id="@+id/splash_gif"
                            android:layout_width="250dp"
                            android:layout_height="200dp"
                            android:layout_gravity="center"
                            android:src="@drawable/neela"
                            android:scaleType="fitEnd"/>
                        <View
                            android:layout_width="250dp"
                            android:layout_height="16dp"
                            android:layout_gravity="center|bottom"
                            android:background="@drawable/gradient_bottom_sky"/>
                    </FrameLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:id="@+id/layout_updates"
                        android:visibility="gone"
                        android:orientation="vertical">
                        <!--daily quotes -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/quotes_title"
                            android:text="@string/temp_title_quotes"
                            android:textColor="@color/darkest_grey"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:fontFamily="@font/arlrdbd"
                            android:layout_marginTop="8dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginBottom="16dp"
                            android:layout_marginStart="16dp" />

                        <!--daily news -->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/news_title"
                            android:text="@string/temp_title_news"
                            android:textColor="@color/darkest_grey"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:fontFamily="@font/arlrdbd"
                            android:layout_marginTop="8dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginBottom="16dp"
                            android:layout_marginStart="16dp" />
                    </LinearLayout>
                    <!-- error layout -->
                    <include layout="@layout/layout_error" />
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>

        <!--bottom -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/layout_bottom"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:background="@drawable/bg_home_card2">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bt_conversation_home"
                android:text="@string/text_btn_conversation"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:fontFamily="@font/arlrdbd"
                android:textSize="16sp"
                android:background="@drawable/bg_conversation_btn" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>